fixed the text overflow in docker file path directory in docker config setting

--- a/src/components/ciConfig/CIConfig.scss
+++ b/src/components/ciConfig/CIConfig.scss
@@ -39,16 +39,16 @@
                 display: flex;
                 .checkout-path-container {
                     padding: 8px 10px;
-                    background: var(--N100);
                     border-radius: 4px 0 0 4px;
-                    border: 1px solid var(--N200);
-                    border-right: none;
                     max-width: 200px;
+                    min-width: 30px;
                     overflow: hidden;
                     text-overflow: ellipsis;
+                    white-space: nowrap;
                 }
                 .file-name {
-                    border-radius: 0 4px 4px 0;
+                    border-radius: 0 4px 4px 0; 
+                    white-space: nowrap;
                 }
             }
         }
